--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -454,9 +454,11 @@ width: 355px;
 .catalog-card {
 
     width: 668px;
+    height: 560px;
     margin: 0 auto;
 
     &__item {
+      height: 500px;
       @include flexbox;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -465,7 +467,7 @@ width: 355px;
     &__title {
       @include titleXlTab;
       align-self: flex-start;
-      margin: 0 0 59px 0;
+      // margin: 0 0 59px 0;
     }
 
       &__hot-sale {
@@ -488,8 +490,8 @@ width: 355px;
       }
 
       &__detail {
-        min-width: 30%;
-        height: 244px;
+        height: 255px;
+        align-self: center;
       }
 
       &__descr {
@@ -500,7 +502,13 @@ width: 355px;
       }
       &__to-buy{
         height: 130px;
-        width: 256px;
+        width: 292px;
+      }
+      &__btn{
+        width: 292px;
+      }
+      &__picture{
+        display: inline-block;
       }
      
   }
@@ -624,7 +632,7 @@ width: 355px;
       order: 2;
       align-self: flex-end;
       flex-grow: 2;
-      margin-right: 40px;
+      width: 350px;
     }
 
     &__picture{
@@ -632,15 +640,15 @@ width: 355px;
     }
 
     &__to-buy{
-      width: 292px;
+      // width: 292px;
       order: 2;
       align-self: flex-end;
-      margin-right: 60px;
-      flex-grow: 3;
+      flex-basis: 290px;
+      margin-right: 50px;
     }
-    &__btn{
-      width: 292px;
-    }
+    // &__btn{
+    //   width: 292px;
+    // }
   }
 }
 // __index page_____________________________
