--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -3,17 +3,26 @@
   //display: block;
 //}
 .main-catalog {
-  width: 320px;
+  width: 100%;
+  //width: 320px;
 // max-width: 1150px; так он навсю ширину
-margin: 0 auto;
+//margin: 0 auto;
+&__title--block{
+
+background: #f1f1f1;
+
+margin-bottom: 30px;
+margin-top: -10px;
+}
 &__title {
 
 @include textLg(27px, 700);
-padding:70px 0px 74px 40px;
-background: #f1f1f1;
+
+padding: 70px 40px 78px 40px;
+text-align: center;
 line-height:1.1;
-margin-bottom: 30px;
-margin-top: 10px;
+
+
 }
 .catalog {
 &__img{
@@ -501,7 +510,7 @@ width: 355px;
         height: 130px;
         width: 256px;
       }
-     
+
   }
 }
 
@@ -659,9 +668,9 @@ min-width: 768px;
 width: 100%;
 &__title {
 
-
+text-align: center;
 @include textLg(43px, 700);
-    padding:95px 0px 70px 195px;
+    padding:95px 0px 70px 0px;
     background: #f1f1f1;
     line-height:1.1;
 margin-top: 0px;
@@ -676,7 +685,7 @@ margin-top: 0px;
       background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
       right: 0;
       left: 0px;
-      bottom: 30px;
+      bottom: 36px;///возможно надо редактировать
       transform: rotate(-180deg);
     }
 .catalog{
@@ -833,9 +842,9 @@ body{
 
   //width: 100%;
 &__title {
-
+text-align: center;
   @include textLg(53px, 700);
-  padding: 93px 30px 95px 345px;
+  padding: 93px 0px 95px 0px;
   background: #f1f1f1;
   line-height:1;
   margin-top: 0px;
@@ -852,7 +861,7 @@ body{
   background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
   right: 0;
   left: 0px;
-  bottom: 30px;
+  bottom: 44px;//возможно тоже надо править
   transform: rotate(-180deg);
 }
 .catalog{
@@ -862,30 +871,30 @@ width: 100%;
   width: 316px;
   height: 462px;
   //margin-left: 50px;
-  margin-left: 25px;
-  margin-right: 50px;
-  margin-top: 18px;
+  margin-left: 35px;
+  margin-right: 30px;
+  margin-top: 10px;
   //margin-top: -19px;
 }
 &__img1{
 
   width: 316px;
   height: 462px;
-  margin-right: 50px;
-  margin-top: 18px;
+  margin-right: 30px;
+  margin-top: 10px;
 }
 &__img2{
 
   width: 316px;
   height: 462px;
-  margin-right: 50px;
-  margin-top: 18px;
+  margin-right: 40px;
+  margin-top: 10px;
 }
 &__item{
-  margin-left: -341px;
+  margin-left: -321px;
   width: 314px;
   height: 197px;
-  margin-top: 495px;
+  margin-top: 480px;
   border: 1px solid #ececec;
   background-color: #ffffff;
 }
@@ -920,7 +929,7 @@ width: 100%;
 }
 }
 .player-video{
-    width: 1049px;
+    width: 1055px;
     height: 455px;
     border: 1px solid #ececec;
     background-color: #ffffff;
@@ -929,17 +938,19 @@ width: 100%;
     flex-direction: column;
     margin-top: 28px;
     margin-bottom: 105px;
+   margin-left: 60px;
+
 .player-process{
 @include flexbox;
 &__title{
 @include textLg(20px, 700);
 line-height:1.2;
 width: 148px;
-margin-left: 30px;
+margin-left: 50px;
 margin-top: 50px;
 }
 &__link-pic{
-margin-left: 30px;
+margin-left: 50px;
 margin-top: 2px;
 }
 }
@@ -949,12 +960,13 @@ background:url('/src/img/video-desktop.png')no-repeat;
 width: 682px;
 height: 455px;
 margin-top: 0px;
+//margin-left: 10px;
 }
 &__descr{
 @include textLg(15px, 400);
 width: 225px;
 height: 106px;
-margin-left: 30px;
+margin-left: 50px;
 line-height: 2;
 }
 }
@@ -964,7 +976,7 @@ width: 230px;
 height: 52px;
 border: 2px solid #444444;
 background-color: #ffffff;
-margin-left: 30px;
+margin-left: 50px;
 margin-top: 60px;
 }
 
