Синхронизация с изменениями от Кати

--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -887,11 +887,11 @@ width: 100%;
 
   width: 316px;
   height: 462px;
-  margin-right: 40px;
+  margin-right: 30px;////
   margin-top: 10px;
 }
 &__item{
-  margin-left: -321px;
+  margin-left: -311px;////
   width: 314px;
   height: 197px;
   margin-top: 480px;
