--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -26,12 +26,18 @@ margin-left: -30px;
 padding:70px 0px 78px 0px;
 text-align: center;
 line-height:1.1;
-
+margin-bottom: 10px;
 //margin-top: 10px;
-
-
-
 }
+&__customer {
+  ///может удалить
+  //display: flex;
+//flex-direction: column;
+}
+
+
+
+
 &__text{
 @include textLg(13px, 400);
 line-height: 1.8;
@@ -305,15 +311,20 @@ margin-bottom: 17px;
 }
 &__note{
 @include textLg(14px, 400);
-line-height: 16px;
+line-height: 1.14;
 color:$darkGray;
 //margin-left: 33px;
 }
 &__btn{
-margin-top: 30px;
+margin-top: 35px;
 //margin-left: 33px;
 margin-bottom: 0px;
+display: inline-block;
+vertical-align: top;
 }
+
+////может удалить
+
 }
 @media (min-width:768px){
 .page-form{
@@ -326,6 +337,7 @@ margin-bottom: 0px;
 margin-top:10px;
 margin-bottom: 0px;
 }
+
 //////////
 &__title--line:after {
   content: "";
@@ -341,6 +353,14 @@ margin-bottom: 0px;
   //top: 80px;
   width: 100%;
   transform: rotate(-180deg);
+//&__customer {
+  ///может удалить
+  //display: flex;
+  //flex-direction: column;
+//}
+
+
+
 
 }
 &__text{
@@ -559,42 +579,53 @@ width: 470px;
 padding: 13px 10px 90px 15px;//83
 margin-top: -40px;
 line-height:0.94;
-margin-bottom: 45px;
+//margin-bottom: 45px;
 }
 }
 &__note {
 @include textLg(17px, 400);
 line-height: 1.7;
-margin-left: 395px;
-position:relative;
-display: inline-block;
-margin-top:16px;
+//align-self: flex-end;
+//order: 1;
+//flex-basis: 90px;
+//margin-top: -40px;
+//margin-right: 65px;
+margin-top: 45px;
+margin-right: 55px;
+display: flex;
+flex-direction: row-reverse;
+
 }
 &__btn{
-margin-bottom: 50px;
-margin-left: 30px;
+margin-left: 35px;
 width: 230px;
 margin-top: -35px;
-display: inline-block;
-position: relative;
-vertical-align:top;
+margin-bottom: 50px;
 }
 }
 }
 @media (min-width:1024px){
 .page-form{
-  width: 100%;
-//min-width: 1024px;
+  //width: 100%;
+ //margin: 0 auto;
 //margin-bottom: -60px;
 &__title--blocks{
+//width: 1200px;
   margin-left: 0px;
+  //
 }
 &__title{
 @include textLg(53px, 700);
 line-height:1.07;
 padding:94px 0px 95px 0px;
 text-align: center;
+margin: 0 auto;
+
 }
+
+
+
+
 &__text{
   width: 682px;
 @include textLg(17px, 400);
@@ -697,7 +728,7 @@ border-bottom: 2px solid #63d1bb;
 
 &__data--block{
   //width: 100%;
-//width:1200px;
+//width:1200px;//////
 height: 228px;
 background-color: #f1f1f1;
 //margin-left: -20px;
@@ -743,19 +774,15 @@ border: 2px solid #63d1bb;
 }
 }
 &__note{
-margin-left:650px;
-display: block;
-position: relative;
-margin-top: 15px;
+//align-self: f;
+margin-left:250px;
+display: flex;
+margin-top: 0px;
 }
 &__btn{
 margin-left: 250px;
-margin-top: -40px;
-display: inline-block;
-//position: relative;
-vertical-align:top;
-margin-bottom: 50px;
-//display: flex;
+//margin-top: -40px;
+margin-top: -25px;
 }
 }
 }
