редактирование мобильного меню

--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -4,6 +4,7 @@
 //}
 .main-catalog {
   width: 100%;
+  margin:auto;
   //width: 320px;
 // max-width: 1150px; так он навсю ширину
 //margin: 0 auto;
