--- a/src/style/blocks/pageHeader/topMenu.scss
+++ b/src/style/blocks/pageHeader/topMenu.scss
@@ -1,129 +1,192 @@
 
 @media screen and (min-width: 320px)  and (max-width: 767px){
 
-.hamburger-btn {
-    display: inline-block;
-  overflow: visible;
-    margin: 10px;
-  padding: 15px;
-    cursor: pointer;
-    text-transform: none;
-    color: inherit;
-    background-color: transparent;
-    border: 0;
-  outline: none;
-    position: relative;
-    left: 70%;
-  top: 0;//
-    z-index: 1;
-  }
-
-  .hamburger {position: relative;
-    display: inline-block;
-    width: 20px;
-    height: 14px;
-  }
-
-
-  .openBtn{
-    top: 50%;
-    display: block;
-    margin-top: 3px;
-  margin-left: 20px;
-    content: "";
-    position: absolute;
-    width: 20px;
-    height: 2px;
-    border-radius: 4px;
-    background-color: #000;
-    transition: 0.2s;
-
-
-  }
-
-  .openBtn:before{
-    display: block;
-    content: "";
-    position: absolute;
-    width: 20px;
-    height: 2px;
-    border-radius: 4px;
-    background-color: #000;
-    top: -6px;
-     transition: 0.2s;
-
-  }
-  .openBtn:after{
-    display: block;
-    content: "";
-    position: absolute;
-    width: 20px;
-    height: 2px;
-    border-radius: 4px;
-    background-color: #000;
-    bottom: -6px;
-     transition: 0.2s;
-
-  }
-
-  .closeBtn::before{
-    display: block;
-    content: "";
-    position: absolute;
-    width: 21px;
-    height: 3px;
-    border-radius: 4px;
-    background-color: #000;
-    top: -10px;
-    transform: rotate(45deg);
- transition: 0.2s;
+.hamburger-btn{
+  display: block;
+  font-size: 0;
+  background: none;
+  border: none;
+  width: 20px;
+  height: 14px;
+  position: relative;
+  cursor: pointer;
+left: 85%;
+border: none;
+top: 32px;
 }
-  .closeBtn::after{
-    display: block;
-    content: "";
-    position: absolute;
-    width: 21px;
-    height: 3px;
-    border-radius: 4px;
-    background-color: #000;
-    top: -10px;
-    transform: rotate(-45deg);
-     transition: 0.2s;
+.hamburger-btn,
+.hamburger-btn::before,
+.hamburger-btn::after{
+  border-top: 2px solid #000;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+
+transition:   .3s;
+cursor: pointer;
+}
+.hamburger-btn::before,
+.hamburger-btn::after{
+  position: absolute;
+  content: "";
+  display: block;
+  left: 0;
+  right: 0;
+
+}
+.hamburger-btn::before{
+top: 4px;
+}
+.hamburger-btn::after{
+  top: 10px;
+}
+.hamburger-btn.opened{
+  border-top-color: transparent;
+
+}
+
+.hamburger-btn.opened::after{
+cursor: pointer;
+  transform: rotate(45deg);
+  top: 12px;
+
+}
+.hamburger-btn.opened::before{
+cursor: pointer;
+  	transform: rotate(-45deg);
+  	top: 12px;
+
+}
 
 
-  }
+
+//.hamburger-btn {
+    //display: inline-block;
+  //overflow: visible;
+    //margin: 10px;
+  //padding: 15px;
+    //cursor: pointer;
+    //text-transform: none;
+    //color: inherit;
+    //background-color: transparent;
+    //border: 0;
+  //outline: none;
+    //position: relative;
+    //left: 70%;
+  //top: 0;//
+    //z-index: 1;
+  //}
+
+  //.hamburger {position: relative;
+    //display: inline-block;
+    //width: 20px;
+    //height: 14px;
+  //}
+
+
+  //.openBtn{
+    //top: 50%;
+    //display: block;
+   // margin-top: 3px;
+  //margin-left: 20px;
+    //content: "";
+    //position: absolute;
+    //width: 20px;
+    //height: 2px;
+    //border-radius: 4px;
+    //background-color: #000;
+    //transition: 0.2s;
+
+
+  //}
+
+  //.openBtn:before{
+    //display: block;
+    //content: "";
+    //position: absolute;
+    //width: 20px;
+    //height: 2px;
+    //border-radius: 4px;
+    //background-color: #000;
+    //top: -6px;
+     //transition: 0.2s;
+
+  //}
+  //.openBtn:after{
+    //display: block;
+    //content: "";
+    //position: absolute;
+    //width: 20px;
+    //height: 2px;
+    //border-radius: 4px;
+    //background-color: #000;
+    //bottom: -6px;
+     //transition: 0.2s;
+
+  //}
+
+  //.closeBtn::before{
+    //display: block;
+    //content: "";
+    //position: absolute;
+    //width: 21px;
+    //height: 3px;
+    //border-radius: 4px;
+    //background-color: #000;
+    //top: -10px;
+    //transform: rotate(45deg);
+ //transition: 0.2s;
+//}
+  //.closeBtn::after{
+    //display: block;
+    //content: "";
+    //position: absolute;
+    //width: 21px;
+    //height: 3px;
+    //border-radius: 4px;
+    //background-color: #000;
+    //top: -10px;
+    //transform: rotate(-45deg);
+     //transition: 0.2s;
+
+
+  //}
 
   .menu-top__list.closed{
+    cursor: pointer;
     display: none;
   }
   .menu-top__list.opened{
     display: block;
   }
-  .menu-top__list.closed.open{
-    display: block;
-    position: relative;
-    top: -74px;
-    left: 0;
-  }
-  .hamburger-btn, .opened{
-    border-top-color: transparent;
-  }
-  .closeBtn{
-    display: none;
-    width: 40px;
-    height: 20px;
-    position: relative;
-    top: 18px;
-    left: 0;
-  }
+  //.menu-top__list.closed.open{
+    //display: block;
+    //position: relative;
+    //top: -74px;
+    //left: 0;
+  //}
+  //.hamburger-btn.opened{//////(,)
+    //border-top-color: transparent;
+  //}
+  //.closeBtn{
+    //display: none;
+    //width: 40px;
+    //height: 20px;
+   //position: relative;
+    //top: 18px;
+    //left: 0;
+  //}
 }
 
 
 
 
 .menu-top {
+height: 79px;
+
+
 
   &__logo {
+
     text-align: center;
     height: 59px;
     border-bottom: 1px solid $frameMenu;
@@ -135,10 +198,11 @@
       &:active {
         opacity: 0.3;
       }
-      &-tablet, &-desktop{
+
+    &-tablet, &-desktop{
         display: none;
       }
-  }
+ }
 
   &__item {
     border-bottom: 1px solid $frameMenu;
@@ -213,6 +277,12 @@
   }
   &__link:active {
     opacity: 0.1;
+  }
+  .menu-top.closed{
+    display: none;
+  }
+  .menu-top.opened{
+    display: block;
   }
 }
 
