--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -4,6 +4,8 @@
 //width: 100%;
 
 .page-form{
+  //margin: auto;
+
 width: 100%;
 margin: 0 auto;
 &__title--blocks{
@@ -30,6 +32,8 @@ margin-bottom: 10px;
 //margin-top: 10px;
 }
 &__customer {
+  //margin: auto;
+
   ///может удалить
   //display: flex;
 //flex-direction: column;
@@ -777,6 +781,7 @@ border: 2px solid #63d1bb;
 margin-left:250px;
 display: flex;
 margin-top: 0px;
+
 }
 &__btn{
 margin-left: 250px;
