--- a/src/style/blocks/pageHeader/topMenu.scss
+++ b/src/style/blocks/pageHeader/topMenu.scss
@@ -198,6 +198,10 @@ height: 79px;
         opacity: 0.3;
       }
 
+      &-mobile{
+        margin-top: 18px;
+      }
+
     &-tablet, &-desktop{
         display: none;
       }
