новая форма, начала редактировать стили для нее

--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -1,792 +1,42 @@
+.form-page{
 
-.main{
-//margin: 0 auto;
-//width: 100%;
+    &__title{
+        background-color: $frameMenu;
+        line-height: 5;
+        text-align: center;
+        height: 140px;
+        font-size: 27px;
+        margin: 0;
+        border-top: 1px solid $frameMenu;
+    }
 
-.page-form{
-  //margin: auto;
+    &__text{
+        height: 140px;
+        line-height: calc(28/13);
+        padding: 24px 26px 0 38px;
+        font-size: 13px;
+    }
 
-width: 100%;
-margin: 0 auto;
-&__title--blocks{
-//padding-left: 40px;
-//padding-right: 40px;
-  min-width:320px;
-  //max-width: 1200px;
-  //
-  background: #f1f1f1;
-  //margin-bottom: 0px;
-  margin-top: -10px;
-margin-left: -30px;
-//width: 100%;
-//height: 177px;
-}
+    &__filedset{
+        border: none;
+    }
 
-&__title{
-  //width: 100%;
-@include textLg(27px, 700);
-padding:70px 0px 78px 0px;
-text-align: center;
-line-height:1.1;
-margin-bottom: 10px;
-//margin-top: 10px;
-}
+    &__legend{
+        position: relative;
+        @include titleSm;
+        line-height: calc(16/17);
+        color: $greenLeft;
+    }
 
-
-
-
-&__text{
-@include textLg(13px, 400);
-line-height: 1.8;
-color:#444444;
-width: 242px;
-margin-left: 0px;
-// margin-right: 48px;
- margin-bottom:10px;
-
-}
-.filters{
-  height: 185px;
-  width: 260px;
-&__line::after{
-content:"";
-//display: inline-block;
-// margin-top: -68px;
-height: 1px;
-background-color:#63d1bb;
-// margin-left: 92px;
-left: 65px;
-top: -25px;
-width: 198px;
-position: relative;
-vertical-align: top;
-display: flex;
-}
-&__title{
-@include textLg(17px, 700);
-line-height: 16px;
-text-transform:uppercase;
-color: #63d1bb;
- //margin-left: 0px;
-//border-right: 198px;
-//top: 19px;
-}
- &__form--radio{
- @include flexbox;
-flex-direction: column;
-height: 186px;
-//top: 0px;
-
-}
-&__radio-grup{
-// margin-top: -7px;
-width: 210px;
-align-self: flex-end;
-height: 60px;
-}
-&__input,&__label{
-cursor: pointer;
-// left: 30px;
-top: 8px;
-}
-&__input:not(checked) {
-  position: absolute;
-  opacity: 0;
-}
-&__input:not(checked)+ label{
-  position: relative;
-  padding-left: 28px;
-}
-&__input:not(checked)+label::before{
-content:'';
-position: absolute;
-top: -12px;
-left: -32px;
-width: 36px;
-height: 36px;
-border:2px solid #444444;
-border-radius:50%;
-background:#fff;
-// margin-left: -30px;
-//margin-bottom:0px;
-}
-&__input:not(checked) + label::after{
-content:'';
-position: absolute;
-top: 0px;
-left: -20px;
-width: 16px;
-height: 16px;
-background-color:#63d1bb;
-border-radius:50%;
-opacity: 0;
-}
-&__input:checked + label:after{
-opacity: 1;
-}
-&__label{
-@include textLg(17px, 700);
-line-height: 18px;
- @include flexbox;
-left: -16px;
-cursor: pointer;
- margin-top: 8px;
-
-}
-}
-.filter{
-&__form--checkbox{
-margin-top: -12px;
-
-}
-&__ch-grup{
- @include flexbox;
-flex-direction: column;
-margin-top: 16px;
-margin-left: -31px;
-}
-&__ch-gr{
-margin-bottom: 43px;
-}
-&__label {
-  @include textLg(17px, 700);
-  line-height: 1.05;
-  margin-left: 62px;
-  cursor: pointer;
-}
-&__input {
-  vertical-align: top;
-  margin: 0 3px 0 0;
-}
-&__input,
-&__label {
-  cursor: pointer;
-//margin-top: 50px;
-}
-
-&__input:not(checked) {
-  position: absolute;
-  opacity: 0;
-}
-&__input:not(checked)+ label {
-  position: relative;
-  padding: 0px 0 0px 34px;
-}
-&__input:not(checked)+label::before {
-  content: '';
-position: absolute;
-  top: -7px;
-  left: 0;
-  width: 36px;
-  height: 35px;
-  border: 2px solid #444444;
-  background: #fff;
-  margin-left: -30px;
-margin-bottom: -20px;
-}
-&__input +label:after{
-content:'';
-height: 8px;
-width: 20px;
-border-left:2px solid;
-border-bottom:2px solid;
-transform: rotate(-45deg);
-left: -20px;
-margin-top: 0px;
-}
-&__input +label{
-position: relative;
-}
-&__input +label:before,
-&__input +label:after{
-position: absolute;
-}
-&__input +label:before{
-top: 3px;
-}
-&__input +label :after{
-left:4px;
-top: 7px;
-}
-&__input+label:after{
-content:none;
-}
-&__input:checked+label:after{
-content:'';
-}
-}
-.customer{
-&__form{
-margin-top: -19px;
-}
-&__name{
- @include flexbox;
-flex-direction: column;
-margin-bottom: 4px;
-}
-&__name-grup{
-  margin-top: 12px;
-//top: 15px;
-}
-&__title{
-  @include textLg(17px, 700);
-  line-height: 0.9;
-  color: #63d1bb;
-  text-transform:uppercase;
-margin-left: 30px;
-  margin-bottom: 20px;
-}
-&__label{
-@include textLg(17px, 700);
-line-height: 1.05;
- //margin-left: px;
-//margin-top: 8px;
-}
-    &__input {
-@include textLg(17px, 400);
-line-height: 1.05;
-
-border:none;
-color: #000;
-opacity:0.6;
-border-bottom:2px solid #000;
-width: 260px;
-padding:15px 0px 14px 0;
-margin-bottom: 8px;
-//margin-left: px;
-}
-&__data{
-margin-top: 0px;
- @include flexbox;
-flex-direction: column;
-}
-&__title--data{
-  margin-top: 30px;
-}
-&__img-phone {
-background:url('/src/img/sprites.png')  -212px -263px;
-width: 25px;
-height: 24px;
-display: block;
-margin-left: 230px;
-//margin-top: 10px;
-}
-&__phone,&__email  {
-width: 260px;
-padding:18px 0 15px 0;
-border:none;
-border-bottom:2px solid #000;
-@include textLg(17px, 400);
-color: #000;
-opacity:0.6;
-line-height: 18px;
-//margin-left: 33px;
-margin-top: -35px;
-margin-bottom: 15px;
-}
-&__img-email{
-background:url('/src/img/mail.png') no-repeat;
-width: 32px;
-height: 21px;
-margin-left: 220px;
-margin-top: 2px;
-}
-&__extra{
-@include input-placeholder;
-color:#000;
-opacity: 0.6;
-@include textLg(17px, 400);
-line-height: 18px;
-padding: 13px 30px 85px 17px;
-width: 210px;
-border: 2px solid #000;
-background-color: #ffffff;
-//margin-left: 33px;
-margin-top: 10px;
-margin-bottom: 17px;
-}
-}
-&__note{
-@include textLg(14px, 400);
-line-height: 1.14;
-color:$darkGray;
-//margin-left: 33px;
-}
-&__btn{
-margin-top: 35px;
-//margin-left: 33px;
-margin-bottom: 0px;
-display: inline-block;
-vertical-align: top;
-}
-
-////может удалить
-
-}
-@media (min-width:768px){
-.page-form{
-//min-width: 768px;
-&__title {
-  @include textLg(43px, 700);
-  padding: 95px 185px 72px 188px;
-  background: #f1f1f1;
-  line-height: 1.16;
-margin-top:10px;
-margin-bottom: 0px;
-}
-
-//////////
-&__title--line:after {
-  content: "";
-  display: block;
-  position: relative;
-  background-repeat: repeat;
-  height: 10px;
-  background-size: 33px 14px;
-  background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
-  right: 0;
-  left: 0px;
-  //bottom: 30px;
-  //top: 80px;
-  width: 100%;
-  transform: rotate(-180deg);
-//&__customer {
-  ///может удалить
-  //display: flex;
-  //flex-direction: column;
-//}
-
-
-
-
-}
-&__text{
-  width:612px;
-@include textLg(17px, 400);
-line-height:1.76;
-margin-left: 30px;
-margin-top: 74px;
-padding-bottom: 50px;
-}
-.filters{
-  //display: flex;
-
-
-  width: 100%;
-&__line::after{
-display: none;
-}
-&__title{
-
-margin-left: -25px;
-margin-top: 57px;
-//margin: 30px 0 -18px 0;
-}
-&__form--radio{
-display: inline-block;
-position: relative;
-margin-left: 55px;
-margin-top: -42px;
-//top: -12px;
-//display: flex;
-
-
-}
-&__radio-grup{
-margin-left: 69px;
-margin-top: -8px;
-margin-bottom: 25px;
-width: 100%;
-}
-&__input:not(checked)+label::before {
-  content: '';
-  position: absolute;
-  top: -6px;
-  left: 0;
-  width: 50px;
-  height: 50px;
-  border: 2px solid #444444;
-  border-radius: 50%;
-  background: #fff;
-
-}
-&__input:not(checked)+label::after {
-  content: '';
-  position: absolute;
-  top: 10px;
-  left: 16px;
-  width: 22px;
-  height: 22px;
-  background-color: #63d1bb;
-  border-radius: 50%;
-opacity: 0;
-}
-&__input:not(checked)+label {
-  position: relative;
-  padding: 10px 0px 0px 83px;
-}
-
-&__label  {
-  @include textLg(19px, 700);
-  line-height:0.9;
-//@include flexbox;
-margin-left: 30px;
-  cursor: pointer;
-  margin-top: -8px;
-
-}
-}
-.filter{
- @include flexbox;
-flex-direction: row;
-height: 304px;
-background-color: #f1f1f1;
-margin-top: -10px;
-.filters__title {
-margin-left: 30px;
-  margin-top: 80px;
-}
-&__ch-grup{
-@include flexbox;
-flex-direction:row;
-flex-wrap:wrap;
-margin-left: 162px;
-margin-top: -50px;
-position: relative;
-height: 200px;
-}
-&__ch-gr{
-@include flexbox;
-width: 190px;
-margin-top: 15px;
-margin-right: 75px;
-}
-&__input:not(checked)+label::before {
-  content: '';
-  position: absolute;
-  top: -14px;
-  left: 0;
-  width: 50px;
-  height: 48px;
-  border: 2px solid #444444;
-  background: #fff;
-  margin-left: -30px;
-  margin-bottom: -20px;
-}
-&__input:not(checked)+label {
-  position: relative;
-  padding: 1px  50px;
-}
-&__label{
-@include textLg(19px, 700);
-line-height:0.9;
-
-}
-&__input+label:after {
-  content: '';
-  height: 15px;
-  width: 28px;
-  border-left: 2px solid;
-  border-bottom: 2px solid;
-  transform: rotate(-45deg);
-  left: -15px;
-  margin-top: 0px;
-}
-&__input+label:after {
-  content: none;
-}
-}
-.customer{
-margin-top: 32px;
-margin-left: 55px;
-&__name-grup{
-@include flexbox;
-margin-left: 140px;
-margin-top: 5px;
-margin-bottom: 45px;
-}
-&__label{
-@include textLg(19px, 700);
-line-height:0.9;
-margin-right: 20px;
-margin-top: -40px;
-}
-&__input{
-//padding-left: 16px;
-width: 410px;
-margin-bottom: 31px;
-height: 20px;
-margin-top: -55px;
-@include textLg(19px, 400);
-line-height:0.9;
-margin-left: 20px;
-}
-&__input--line{
-width: 350px;
-}
-&__data--block {
-
-height: 228px;
-background-color: #f1f1f1;
-margin: -30px 0px 0px -50px;
-}
-
-.filters__title--data{
-margin-left: 25px;
-margin-top: 64px;
-margin-bottom: -20px;
-@include textLg(17px, 700);
-line-height:0.94 ;
-}
-&__img-phone{
-background:url('/src/img/sprites.png') -212px -263px;
-
-margin-top: 60px;
-position: absolute;;
-margin-left: 645px;
-cursor: pointer;
-z-index: 9;
-width: 25px;
-height: 24px;
-}
-&__img-email{
-//display: block;
-margin-top: 140px;
-margin-left: 635px;
-position: absolute;
-z-index: 7;
-cursor: pointer;
-}
-&__phone ,&__email{
-
-margin-left: 190px;
-margin-top: -5px;//20
-margin-bottom: -19px;///30
-padding:5px 220px 10px 18px;
-@include textLg(19px, 400);
-line-height:0.94;
-background-color: #f1f1f1;
-//vertical-align:top;
-}
-&__extra{
-margin-left: 140px;
-@include input-placeholder;
-@include textLg(19px, 400);
-width: 470px;
-padding: 13px 10px 90px 15px;//83
-margin-top: -40px;
-line-height:0.94;
-//margin-bottom: 45px;
-}
-}
-&__note {
-@include textLg(17px, 400);
-line-height: 1.7;
-//align-self: flex-end;
-//order: 1;
-//flex-basis: 90px;
-//margin-top: -40px;
-//margin-right: 65px;
-margin-top: 45px;
-margin-right: 55px;
-display: flex;
-flex-direction: row-reverse;
-}
-&__btn{
-margin-left: 35px;
-width: 230px;
-margin-top: -35px;
-margin-bottom: 50px;
-}
-}
-}
-@media (min-width:1024px){
-.page-form{
-  //width: 100%;
- //margin: 0 auto;
-//margin-bottom: -60px;
-&__title--blocks{
-//width: 1200px;
-  margin-left: 0px;
-  //
-}
-&__title{
-@include textLg(53px, 700);
-line-height:1.07;
-padding:94px 0px 95px 0px;
-text-align: center;
-
-}
-
-
-
-
-&__text{
-  width: 682px;
-@include textLg(17px, 400);
-line-height: 1.7;
-color:#444444;
-margin-left: 250px;
-margin-right: 200px;
-margin-top: 123px;
-}
-.filters{
-&__title{
-margin-left: 58px;
-margin-top: 55px;
-}
-&__form--radio{
-left: 28px;
-//margin-top: 12px;
-}
-&__input:not(checked),&__label:hover::before {
-  content: '';
-  position: absolute;
-  top: -5px;
-  left: 0;
-  width: 50px;
-  height: 50px;
-  border: 2px solid #63d1bb;
-border-radius: 50%;
-  background: #fff;
-  }
-&__input:not(checked),&__label:active::before {
-  content: '';
-  position: absolute;
-  top: -5px;
-  left: 0;
-  width: 50px;
-  height: 50px;
-  border: 2px solid #e5e5e5;
-  border-radius: 50%;
-  background: #fff;
-}
-}
-.filter{
-height: 228px;
-.filters__title{
-margin-left: 130px;
-}
-&__ch-grup{
-left: 52px;
-height: 142px;
-right: 30px;
-top: 0px;
-}
-&__input:not(checked)+label:hover::before {
-  content: '';
-  position: absolute;
-  //top: -8px;
-  left: 0;
-  width: 50px;
-  height: 48px;
-  border: 2px solid #63d1bb;
-background: #fff;
-  //margin-left: 30px;
-  //margin-bottom: 20px;
-}
-&__input:not(checked)+label:active::before {
-  content: '';
-  position: absolute;
-  //top: -8px;
-  left: 0;
-  width: 50px;
-  height: 48px;
-  border: 2px solid #e5e5e5;
-background: #fff;
-  //margin-left: -30px;
-  //margin-bottom: -20px;
-}
-
-
-&__label{
-@include flexbox;
-margin-bottom: 0px;
-}
-}
-.customer{
-.filters__title--name{
-  margin-left: 79px;
-}
-&__name-grup{
-margin-left: 195px;
-}
-&__input{
-width: 570px;
-}
-&__input:hover{
-border-bottom: 2px solid #63d1bb;
-}
-&__input:active {
-  border-bottom: 2px solid #63d1bb;
-}
-
-&__data--block{
-  //width: 100%;
-//width:1200px;//////
-height: 228px;
-background-color: #f1f1f1;
-//margin-left: -20px;
-margin-bottom: 25px;
-}
-.filters__title--data{
-margin-left: 130px;
-
-}
-&__phone,
-&__email{
-margin-left: 245px;
-width: 460px;
-}
-&__phone:hover,
-&__email:hover{
-border-bottom: 2px solid #63d1bb;
-
-}
-
-&__img-phone,&__img-email{
-margin-left: 910px;
-}
-&__img-phone:hover{
-background:url('/src/img/sprites.png')  -264px -263px;
-width: 25px;
-height: 24px;
-margin-left: 910px;
-z-index: 7;
-}
-.filters__title--additionally{
-margin-left: 80px;
-margin-top: 35px;
-}
-&__extra{
-width: 670px;
-margin-left: 190px;
-margin-bottom: 45px;
-}
-&__extra:hover{
-border: 2px solid #63d1bb;
-
-}
-}
-&__note{
-//align-self: f;
-margin-left:250px;
-display: flex;
-margin-top: 0px;
-
-}
-&__btn{
-margin-left: 250px;
-//margin-top: -40px;
-margin-top: -25px;
-}
-}
-}
-
-
-
-
-
+    &__legend::after{
+        position: absolute;
+        content: "";
+        width: 198px;
+        height: 1px;
+        background-color: $greenLeft;
+        left: 70px;
+        top: 10px;
+    }
 
 
 }
