--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,6 +14,7 @@
 @import 'blocks/pageMain/catalogItems.scss';
 @import 'blocks/pageMain/aboutUs.scss';
 @import 'blocks/pageMain/contacts.scss';
+// @import 'blocks/pageMain/for.scss';
 @import 'blocks/pageMain/form.scss';
 
 @import 'blocks/pageFooter/topFooter.scss';
