--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -4,47 +4,46 @@
 //}
 .main-catalog {
   width: 100%;
-  margin:auto;
-  //width: 320px;
-// max-width: 1150px; так он навсю ширину
-//margin: 0 auto;
+  //margin:auto;
+
 &__title--block{
-
-background: #f1f1f1;
-
+ display: flex;
+  align-items: center;
+  justify-content: center;
+//min-width:320px;
+  height:177px;
+  background: #f1f1f1;
+  //margin-top: -10px;
 margin-bottom: 30px;
-// margin-top: -10px;
+
 }
 &__title {
-
 @include textLg(27px, 700);
-
-padding: 70px 40px 78px 40px;
-text-align: center;
 line-height:1.1;
-
+text-align: center;
 
 }
 .catalog {
 &__img{
-  width:260px;
+  //width: 100%;
+  //width:260px;
     height: 195px;
-    margin-left: 15px;
+    //margin-left: 15px;
+
 }
 &__img1{
-width: 260px;
+//width: 260px;
     height: 195px;
-    margin-left: 15px;
+    //margin-left: 15px;
     //margin-top: -5px;
 }
 &__img2{
-width: 260px;
+//width: 260px;
     height: 195px;
-    margin-left: 15px;
+    //margin-left: 15px;
 }
 &__item {
-
- width: 258px;
+width: 258px;
  //height: 179px;
   border: 1px solid #ececec;
   margin-left: 30px;
@@ -66,7 +65,7 @@ width: 260px;
 @include textLg(17px,700);
   line-height: 1.4;
  width: 196px;
-  margin: 27px 0 -8px 25px;
+  margin: 27px 0px 0px 25px;
 }
 &__title:hover{
   opacity: 0.6;
@@ -127,10 +126,11 @@ width: 260px;
   margin: 30px 30px 58px 30px;
   flex-direction: column;
   @include flexbox;
-.player-process {
-  @include flexbox;
-  flex-direction: row-reverse;
+&__description {
+@include flexbox;
+  //flex-direction: row-reverse;
   //justify-content: space-around;
+  }
 &__title {
   @include textLg(17px, 700);
   width: 126px;
@@ -147,10 +147,10 @@ width: 260px;
   margin-top: 35px;
   margin-left: 18px;
 }
-}
+
 .video-page {
 &__video img{
-  width: 260px;
+  //width: 260px;
   height: 150px;
 margin-top: 10px;
 margin-left: 0px;
@@ -215,15 +215,19 @@ opacity:0.8;
   //display: block;
 //}
 .modal-ctg {
-  margin-top: -150px;
-  margin-left: -30px;
+  margin: 0 auto;
+ right: 0px;
+ left: 0;
+  //margin-top: -150px;
+  //margin-left: 0px;
+  //width: 100%;
   width: 320px;
   height: 336px;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   border: 1px solid #c6c6c6;
   background: $white;
   position: fixed;
-  top: 50%;
+  top: 30%;
   z-index: 5;
    display: none;
   &__title {
@@ -376,13 +380,13 @@ opacity:0.8;
 .modal-ctg {
   width: 566px;
   height: 336px;
-  margin-top: -250px;
-  margin-left: 50px;
+  //margin-top: -250px;
+  //margin-left: 50px;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   border: 1px solid #c6c6c6;
   background: $white;
   position: fixed;
-  top: 50%;
+  top: 30%;
   z-index: 5;
   display: none;
   &__title {
@@ -525,15 +529,15 @@ width: 355px;
 
 @media (min-width: 1024px) {
 .modal-ctg {
-  margin-top: -250px;
-  margin-left: 240px;
+  //margin-top: -250px;
+  //margin-left: 240px;
   width: 566px;
   height: 336px;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   border: 1px solid #c6c6c6;
   background: #fff;
   position: fixed;
-  top: 50%;
+  top: 30%;
   z-index: 5;
   display: none;
   &__title {
@@ -631,7 +635,7 @@ width: 355px;
       margin: 0;
     }
 
-    &__hot-sale {
+  &__hot-sale {
       order: 1;
       align-self: flex-start;
       margin: 65px 0 0 15px;
@@ -668,8 +672,11 @@ width: 355px;
   &__item {
     @include flexbox;
     flex-wrap: wrap;
-    justify-content: space-between;
+    //justify-content: space-between;
   }
+
+
+
   &__title {
 @include titleXlTab;
     align-self: flex-start;
@@ -678,16 +685,24 @@ width: 355px;
   }
 
 .main-catalog{
-min-width: 768px;
-width: 100%;
+//min-width: 768px;
+//width: 100%;
+
+ &__title--block {
+   display: flex;
+   //height: 120px;
+   margin-top: 0px;
+   height: 217px;
+ }
+
 &__title {
 
 text-align: center;
 @include textLg(43px, 700);
-    padding:95px 0px 70px 0px;
+    //padding:95px 0px 70px 0px;
     background: #f1f1f1;
     line-height:1.1;
-margin-top: 0px;
+//margin-top: 0px;
 }
     &__title-line:after {
       content: "";
@@ -699,52 +714,57 @@ margin-top: 0px;
       background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
       right: 0;
       left: 0px;
-      bottom: 36px;///возможно надо редактировать
+      bottom: 30px;///возможно надо редактировать
       transform: rotate(-180deg);
     }
 .catalog{
 
 @include flexbox;
     flex-wrap: wrap;
-    margin-top: 65px;
-  width: 760px;
+    flex-direction: column;
+    margin-top: 22px;
+  //width: 760px;
 &__img{
 
     width: 334px;
     height: 334px;
-    margin-left: 25px;
-    margin-bottom: 64px;
-margin-top: -8px;
+    //margin-left: 25px;
+    //margin-bottom: 64px;
+//margin-top: -8px;
 }
 &__img1{
 
-    width: 334px;
+    //width: 334px;
     height: 334px;
-    margin-left: 25px;
-    margin-bottom: 64px;
-margin-top: -10px;
+    //margin-left: 25px;
+    //margin-bottom: 54px;
+//margin-top: -10px;
 }
 &__img2{
 
-    width: 334px;
+    //width: 334px;
     height: 334px;
-    margin-left: 25px;
-    //margin-bottom: 30px;
-margin-top: -10px;
+    //margin-left: 25px;
+    //margin-bottom: 40px;
+//margin-top: -10px;
 }
 &__item{
-
-    width: 335px;
-    height: 332px;
-    margin-top: -17px;
+//margin-top: 50px;
+//display: flex;
+//flex-direction: row;
+//align-items: flex-end;
+//justify-content: flex-end;
+    width:665px;
+  height: 334px;
+    margin-top: 25px;
     border: 1px solid #ececec;
     background-color: #ffffff;
-    margin-left: 25px;
+    //margin-left: 25px;
 }
 &__title{
     @include textLg(20px, 700);
     line-height:1.2;
-   // margin-left:23px;
+    margin-left:25px;
     margin-top: 26px;
     width: 230px;
     margin-bottom: 2px;
@@ -755,8 +775,8 @@ margin-top: -10px;
 @include textLg(15px, 400);
     color:#444444;
     line-height: 2;
-    margin-top: 3px;
-    padding-bottom: 175px;
+    margin-top: 4px;
+    padding-bottom: 173px;
     border-bottom: 1px solid #ececec;
     width: 268px;
     margin-left: 24px;
@@ -786,28 +806,33 @@ line-height: 1.4;
     @include flexbox;
     width: 668px;
     height: 728px;
-    margin-left: 50px;
+    margin-left: 30px;
     margin-top: 41px;
-.player-process {
+&__description {
     @include flexbox;
     order: 2;
-    margin-top: 43px;
+    //margin-top: 43px;
+    }
 &__title {
     @include textLg(20px, 700);
     line-height: 1.2;
-    margin-top: -47px;
-    margin-right:320px;
+
+    margin-top: 0px;
+//margin-right: 50px;
+    //margin-right:20px;
     width: 241px;
+margin-left: 102px;
 }
 &__link-pic{
     background:url('/src/img/sprites.png') -314px -263px;
 	  width: 32px;
 	  height: 22px;
-    margin-left: 10px;
-    margin-top: -45px;
-    position: absolute;
+    margin-left: 40px;
+    margin-top: 0px;
+
+    //position: absolute;
 }
-}
+
 .video-page {
 &__video img {
     background: url('/src/img/video-tablet-1x.jpg')no-repeat;
@@ -828,23 +853,23 @@ line-height: 1.4;
   margin-left: 280px;
 }
 &__descr {
-  width: 581px;
+  //width: 581px;
   @include textLg(15px, 400);
   order:3;
-  margin-top: -4px;
+  margin-top: 0px;
   margin-left: 40px;
   line-height: 2;
 }
 }
 .player__btn {
   width: 584px;
-  height: 52px;
+  //height: 52px;
   order:4;
   border: 2px solid $darkGray;
   background-color: $white;
-  margin-top: 3px;
+  margin-top: 0px;
   margin-left: 42px;
-  padding:16px 0px 26px 0px;
+  padding:18px 0px 30px 0px;
 }
 }
 }
@@ -853,17 +878,27 @@ line-height: 1.4;
 body{
 
 .main-catalog{
-
+//margin: 0 auto;
   //width: 100%;
+  &__title--block{
+
+    //display: flex;
+    height: 245px;
+    //width: 100%;
+    //width: 1150px;
+    //margin: 0 auto;
+  }
+
 &__title {
 text-align: center;
   @include textLg(53px, 700);
-  padding: 93px 0px 95px 0px;
+  //padding: 93px 0px 95px 0px;
   background: #f1f1f1;
   line-height:1;
-  margin-top: 0px;
+  //margin-top: 0px;
   //text-align: center;
-
+//width: 100%;
+//margin: 0 auto;
 }
 &__title-line:after {
   content: "";
@@ -875,19 +910,26 @@ text-align: center;
   background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
   right: 0;
   left: 0px;
-  bottom: 44px;//возможно тоже надо править
+  //bottom: 44px;//возможно тоже надо править
   transform: rotate(-180deg);
 }
 .catalog{
-width: 100%;
+//width: 100%;
+display: flex;
+flex-direction:row;
+flex-wrap: wrap;
+//flex-wrap: wrap;
+margin-left: 40px;
+margin-top: 70px;
 &__img{
 
+//width: 100%;
   width: 316px;
   height: 462px;
   //margin-left: 50px;
-  margin-left: 35px;
-  margin-right: 30px;
-  margin-top: 10px;
+  //margin-left: 35px;
+  //margin-left: 40px;
+ //margin-top: 10px;
   //margin-top: -19px;
 }
 &__img1{
@@ -895,20 +937,26 @@ width: 100%;
   width: 316px;
   height: 462px;
   margin-right: 30px;
-  margin-top: 10px;
+  //margin-top: 10px;
 }
 &__img2{
 
   width: 316px;
   height: 462px;
   margin-right: 30px;////
-  margin-top: 10px;
+  //margin-top: 10px;
 }
 &__item{
-  margin-left: -311px;////
-  width: 314px;
-  height: 197px;
-  margin-top: 480px;
+margin-right: 20px;
+  //width: 100%;
+  display: flex;
+  flex-direction:column;
+  //flex-wrap: wrap;
+//align-items: flex-end;
+  //margin-left: -311px;////
+  width: 316px;
+  height:auto;
+  //margin-top: 480px;
   border: 1px solid #ececec;
   background-color: #ffffff;
 }
@@ -943,7 +991,7 @@ width: 100%;
 }
 }
 .player-video{
-    width: 1065px;
+    width: 1055px;
     height: 455px;
     border: 1px solid #ececec;
     background-color: #ffffff;
@@ -954,27 +1002,29 @@ width: 100%;
     margin-bottom: 105px;
    margin-left: 70px;
 
-.player-process{
+&__description {
+
 @include flexbox;
+}
 &__title{
 @include textLg(20px, 700);
 line-height:1.2;
 width: 148px;
 margin-left: 50px;
-margin-top: 50px;
+margin-top: 95px;
 }
 &__link-pic{
 margin-left: 50px;
-margin-top: 2px;
+margin-top: 47px;
 }
-}
+
 .video-page{
 &__video img{
 background:url('/src/img/video-desktop.png')no-repeat;
 width: 682px;
 height: 455px;
 margin-top: 0px;
-margin-left: 0px;
+//margin-left: 0px;
 }
 &__descr{
 @include textLg(15px, 400);
@@ -991,7 +1041,7 @@ height: 52px;
 border: 2px solid #444444;
 background-color: #ffffff;
 margin-left: 50px;
-margin-top: 60px;
+margin-top: 55px;
 }
 
 }
