добавлены некоторые контейнеры в форме

--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -40,3 +40,17 @@
 
 
 }
+
+@media (min-width: 768px){
+
+    .form-page{
+
+        &__inner{
+            display: flex;
+        }
+
+        &__legend::after{
+            opacity: 0;
+        }
+    }
+}
