подогнал планшетную версию каталога под PerfectPixel (почти)

--- a/src/style/blocks/pageHeader/topMenu.scss
+++ b/src/style/blocks/pageHeader/topMenu.scss
@@ -482,9 +482,9 @@ button.search-submit:hover{
       margin: 0;
     }
 }
-form.search-form{
+//form.search-form{
   // margin: 30px 0 0 17px;
-}
+//}
 input.search-input {
   position: absolute;
   top: 20px;
