--- a/src/style/blocks/pageFooter/bottomFooter.scss
+++ b/src/style/blocks/pageFooter/bottomFooter.scss
@@ -5,6 +5,7 @@
       margin: 0 auto;
       border-top: 1px solid #e5e5e5;
       cursor: pointer;
+      margin-top: 10px;//может не правильно
       }
 
       &__creator{
@@ -24,7 +25,8 @@
         width: 27px;
         height: 34px;
         vertical-align: middle;
-        margin-left: 25px;
+        //margin-left: 25px;
+        margin-left: 23px;
       }
 
  &__icon:hover {
@@ -56,7 +58,7 @@
     &__copyright{
       border: none;
       margin: 0;
-      flex-basis: 25%;
+      //flex-basis: 25%;
     }
   }
 }
