--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -15,7 +15,7 @@
   background: #f1f1f1;
   margin-top: 0px;
 margin-bottom: 30px;
-
+flex: 1;
 }
 &__title {
 @include textLg(27px, 700);
@@ -161,7 +161,7 @@ height: 18px;
 .video-page {
 &__video img{
   //width: 260px;
-  height: 150px;
+  //height: 150px;
 margin-top: 10px;
 margin-left: 0px;
 
@@ -716,7 +716,7 @@ text-align: center;
     //padding:95px 0px 70px 0px;
     background: #f1f1f1;
     line-height:1.1;
-//margin-top: 0px;
+margin-top: 60px;
 }
     &__title-line:after {
       content: "";
@@ -742,7 +742,7 @@ text-align: center;
 
     width: 334px;
     height: 334px;
-    //margin-left: 25px;
+    //margin-left: 0px;
     //margin-bottom: 64px;
 //margin-top: -8px;
 }
@@ -751,7 +751,7 @@ text-align: center;
     //width: 334px;
     height: 334px;
     //margin-left: 25px;
-    //margin-bottom: 54px;
+    margin-bottom: 54px;
 //margin-top: -10px;
 }
 &__img2{
@@ -773,15 +773,15 @@ text-align: center;
     margin-top: 25px;
     border: 1px solid #ececec;
     background-color: #ffffff;
-    //margin-left: 25px;
+    margin-left: 50px;
 }
 &__title{
     @include textLg(20px, 700);
     line-height:1.2;
-    margin-left:25px;
-    margin-top: 26px;
+    margin-left:26px;
+    margin-top: 24px;
     width: 230px;
-    margin-bottom: 2px;
+    margin-bottom: 4px;
    // padding: 26px 0 3px 23px;
 
 }
@@ -789,7 +789,7 @@ text-align: center;
 @include textLg(15px, 400);
     color:#444444;
     line-height: 2;
-    margin-top: 4px;
+    margin-top: 7px;
     padding-bottom: 173px;
     border-bottom: 1px solid #ececec;
     width: 268px;
@@ -799,7 +799,8 @@ text-align: center;
 @include textLg(15px, 400);
 color:#444444;
 line-height:2;
-margin-top: 5px;
+margin-top: 1px;
+margin-left: 26px;
 width: 268px;
 padding-bottom: 150px;
 
@@ -819,9 +820,10 @@ line-height: 1.4;
 .player-video {
     @include flexbox;
     width: 668px;
-    height: 728px;
-    margin-left: 30px;
+    height: 718px;
+    margin-left: 50px;
     margin-top: 41px;
+    margin-bottom: 60px;
 &__description {
     @include flexbox;
     order: 2;
@@ -831,18 +833,18 @@ line-height: 1.4;
     @include textLg(20px, 700);
     line-height: 1.2;
 
-    margin-top: 0px;
+    margin-top: 30px;
 //margin-right: 50px;
     //margin-right:20px;
     width: 241px;
-margin-left: 102px;
+margin-left: 104px;
 }
 &__link-pic{
     background:url('/src/img/sprites.png') -314px -263px;
 	  width: 32px;
 	  height: 22px;
     margin-left: 40px;
-    margin-top: 0px;
+    margin-top: 30px;
 
     //position: absolute;
 }
@@ -853,7 +855,7 @@ margin-left: 102px;
     width: 668px;
     height: 455px;
     margin-left: 0px;
-    margin-bottom: 39px;
+    //margin-bottom: 39px;
     margin-top: -20px;
     order: 1;
 }
@@ -862,8 +864,8 @@ margin-left: 102px;
   height: 78px;
   cursor: pointer;
   background:url('/src/img/sprites.png') -739px -11px;
-  margin-top: -308px;
-  position: absolute;
+  margin-top: -268px;
+  //position: absolute;
   margin-left: 280px;
 }
 &__descr {
@@ -872,7 +874,7 @@ margin-left: 102px;
   order:3;
   margin-top: 0px;
   margin-left: 40px;
-  line-height: 2;
+  //line-height: 2;
 }
 }
 .player__btn {
@@ -881,9 +883,9 @@ margin-left: 102px;
   order:4;
   border: 2px solid $darkGray;
   background-color: $white;
-  margin-top: 0px;
+  margin-top: 10px;
   margin-left: 42px;
-  padding:18px 0px 30px 0px;
+  padding:16px 7px 30px 0px;
 }
 }
 }
@@ -909,6 +911,7 @@ text-align: center;
   //padding: 93px 0px 95px 0px;
   background: #f1f1f1;
   line-height:1;
+  margin-top: 40px;
   //margin-top: 0px;
   //text-align: center;
 //width: 100%;
@@ -961,7 +964,7 @@ margin-top: 70px;
   //margin-top: 10px;
 }
 &__item{
-margin-right: 20px;
+//margin-right: 20px;
   //width: 100%;
   display: flex;
   flex-direction:column;
@@ -1014,7 +1017,7 @@ margin-right: 20px;
     flex-direction: column;
     margin-top: 28px;
     margin-bottom: 105px;
-   margin-left: 70px;
+   margin-left: 90px;
 
 &__description {
 
